# mtrn4231_ros_individual

./: .gitignore  README.md
launch/: apple_picker_launch.py
src/camera_node/: CMakeLists.txt  package.xml
src/control_node/: CMakeLists.txt  package.xml
src/control_node/include/control_node/: commands.hpp
src/control_node/src/: perception_client.cpp  supervisor_sub.cpp
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: AppleImgPosData.msg  Command.msg
src/perception_pkg/: CMakeLists.txt  package.xml
src/perception_pkg/src/: apple_data_transfer.cpp  server.cpp  service_handler.cpp
src/user_interface/: CMakeLists.txt  package.xml
src/user_interface/src/: ui_publisher.cpp
src/visualisation_pkg/: CMakeLists.txt  apple_detection_config.rviz  package.xml
src/visualisation_pkg/src/: rviz_wrapper.cpp
